@@ -66,7 +66,7 @@ def renderer_factory(info):
         module_directory = settings.get('mako.module_directory', None)
         input_encoding = settings.get('mako.input_encoding', 'utf-8')
         error_handler = settings.get('mako.error_handler', None)
-        default_filters = settings.get('mako.default_filters', None)
+        default_filters = settings.get('mako.default_filters', 'h')
         imports = settings.get('mako.imports', None)
         strict_undefined = settings.get('mako.strict_undefined', 'false')
         if directories is None:
